text align issue fixed

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -280,14 +280,14 @@ footer {
 }
 
     .infotext h2 {
-        font-size: 48px;
+        font-size: 40px;
         height: 80px;
         justify-self: flex-end;
     }
 
     .logosmall {
-        width: 60px;
-        height: 60px;
+        width: 50px;
+        height: 50px;
         margin: 0 0 0 10px;
         justify-self: flex-start;
         align-self: flex-start;
@@ -330,6 +330,7 @@ footer {
     .videobox p {
         padding: 10px 25px 0px 25px;
         justify-self: center;
+        text-align: center;
     }
     
     iframe {
